# pyenv-doctor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-04-24-终验审计报告.md  2026-05-02-文档更新说明.md  PyEnv_Doctor_PRD_v1.1.md  PyEnv_Doctor_PRD_v1.2.md  PyEnv_Doctor_PRD_v3.1.md  PyEnv_Doctor_SDD_v1.0.md  PyEnv_Doctor_SDD_v1.1.md  PyPI_发布完整指南.md  README.md  目录结构说明.md
src/pyenv_doctor/: __init__.py  cli.py
src/pyenv_doctor/agents/: __init__.py  conflict_solver.py  env_scanner.py  sandbox_executor.py
src/pyenv_doctor/cli/: __init__.py  main.py  snapshot.py
src/pyenv_doctor/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
src/pyenv_doctor/models/: __init__.py  schemas.py
src/pyenv_doctor/parsers/: __init__.py  pyproject_parser.py  requirements_parser.py
src/pyenv_doctor/repair/: __init__.py  auto_repair.py  rollback.py  strategy.py
src/pyenv_doctor/snapshot/: __init__.py  manager.py  storage.py
src/pyenv_doctor/tools/: __init__.py  pip_tool.py  venv_tool.py
tests/: test_auto_repair.py  test_cli.py  test_conflict_solver.py  test_env_scanner.py  test_integration.py  test_json_exporter.py  test_markdown_exporter.py  test_pyproject_parser.py  test_requirements_parser.py  test_rollback.py  test_sandbox_executor.py  test_schemas.py  test_snapshot_cli.py  test_snapshot_manager.py  test_snapshot_storage.py  test_strategy.py  test_tools.py
