[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyenv-doctor"
version = "0.1.3"
description = "Python environment diagnosis and sandbox preview tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "PyEnv Doctor Team"}
]
keywords = ["python", "environment", "diagnosis", "dependency", "conflict", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "packaging>=21.0",
]

[project.urls]
Homepage = "https://github.com/GH-tll/pyenv-doctor"
Documentation = "https://github.com/GH-tll/pyenv-doctor#readme"
Repository = "https://github.com/GH-tll/pyenv-doctor.git"
Issues = "https://github.com/GH-tll/pyenv-doctor/issues"

[project.scripts]
pyenv-doctor = "pyenv_doctor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pyenv_doctor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
